# openmina

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile_FE  README.md  README.zh.md  audit_report.json  block-production.md  count.sh  docker-compose-producer.yml  docker-compose.archive.devnet.compare.yml  docker-compose.archive.devnet.yml  docker-compose.block-producer.yml  docker-compose.dev.yml  docker-compose.local.producers.yml  docker-compose.yml  docker.md  run-debugger-ocaml-node.yaml  run.yaml  scan-state.md  snark-work.md  status.md  testing.md  versions.sh
allocator/: Cargo.toml
allocator/src/: lib.rs
cli/: Cargo.toml
cli/replay_dynamic_effects/: Cargo.toml
cli/src/: exit_with_error.rs  lib.rs  main.rs
cli/tests/: bootstrap.rs  discovery.rs
core/: Cargo.toml
core/src/: block.rs  chain_id.rs  channels.rs  consensus.rs  constants.rs  distributed_pool.rs  encrypted_key.rs  http.rs  invariants.rs  lib.rs  log.rs  network.rs  p2p.rs  substate.rs  thread.rs
ledger/: Cargo.toml  LICENSE  README.md  berkeley_rc1  dune  index.html  mina_tree.ml  webdriver.json
ledger/src/: address.rs  base.rs  cache.rs  ffi.rs  ffi_mask.rs  hash.rs  lib.rs  main.rs  poseidon.rs  staged_ledger_test.rs  transaction_pool.rs  tree.rs  tree_version.rs  util.rs  verify_block.rs
macros/: Cargo.toml
macros/src/: action_event.md  action_event.rs  lib.rs  serde_yojson_enum.md  serde_yojson_enum.rs
mina-p2p-messages/: Cargo.toml  README.md  default-v2.toml  default.toml  external_transition.json  external_transition.pp.json  types-v1.txt  types-v2.txt
mina-p2p-messages/benches/: gossip-binprot.rs  utils.rs
mina-p2p-messages/examples/: mina-types-converter.rs
mina-p2p-messages/shapes/: berkeley-14047c5551.txt.xz  berkeley-1551e2faaa.txt.xz  berkeley-b1facec.txt.bz2  berkeley-bfd1009.txt.bz2
mina-p2p-messages/src/: array.rs  b58.rs  bigint.rs  char.rs  common.rs  core.rs  core_error.rs  gossip.rs  hash.rs  hash_input.rs  keys.rs  lib.rs  list.rs  number.rs  p2p.rs  phantom.rs  pseq.rs  rpc.rs  rpc_kernel.rs  string.rs  utils.rs  v1.rs  versioned.rs
mina-p2p-messages/tests/: binprot-read.rs  binprot-rs.rs  decode-alloc.rs  decode-bench.rs  decode_alloc.rs  decode_bench.rs  decode_perf.rs  external-transition-binprot-read.rs  jsonify.rs  read-fuzz.rs  rpc-read.rs  snark-pool-diff-binprot-read.rs  state-hash.rs  tx-pool-diff-binprot-read.rs  utils.rs
node/: Cargo.toml  README.md  build.rs
node/account/: Cargo.toml
node/common/: Cargo.toml  README.md
node/invariants/: Cargo.toml  README.md
node/lib/: Cargo.toml  build.rs
node/native/: Cargo.toml  README.md
node/p2p/: Cargo.toml
node/shared/: Cargo.toml
node/snark/: Cargo.toml
node/src/: account.rs  action.rs  action_kind.rs  config.rs  effects.rs  lib.rs  reducer.rs  service.rs  state.rs
node/testing/: Cargo.toml  peer-discovery-test.md  readme.md
node/wasm/: Cargo.toml
node/web/: Cargo.toml  README.md
p2p/: Cargo.toml  build.rs  readme.md  testing.md
p2p/libp2p-rpc-behaviour/: Cargo.toml
p2p/src/: common.rs  fuzzer.rs  lib.rs  libp2p.rs  p2p_actions.rs  p2p_config.rs  p2p_effects.rs  p2p_event.rs  p2p_reducer.rs  p2p_service.rs  p2p_state.rs  peer_id.rs  signaling_method.rs
p2p/testing/: Cargo.toml  README.md
p2p/tests/: basic.rs  connection.rs  identify.rs  kademlia.rs  rpc.rs
producer-dashboard/: .dockerignore  .gitignore  Cargo.toml  build.rs  docker-compose-dev-db.yml  docker-compose-fe-only.yml  docker-compose.yml
producer-dashboard/.sqlx/: query-009408bec267f7f8ffd0c41abc0ff5a9c0dbefe5b2ef90b137922e28be92d519.json  query-02600610e07a229ae4b47df0d93fa008ead5f7cdd40c4a969c9eedd704ce6456.json  query-03386dc569266bdbadfbef2ea10de945354c1f6f6c1b095d60f0fc81d55db10d.json  query-068afe4ccb67573dc231bbe48dbdeb46b33daa7369fb5b4b3f1acffaa30a9fb1.json  query-123e3715df72b29a64392130d8a397c107a32df3a57fda2bfd4328ee37def8f5.json  query-17ef7803e935b65ec533025960f254e31116786d65179d24a81c1de1376893de.json  query-28eef65ee868d56b20d9673f2a9d6618e0666295d6058471201948709059e9b8.json  query-2acceddaf2d6f312ad6857895479660c4698b00c9bb59ea989b8e067951f1d04.json  query-3070820613a48acae1cff9e6a9b5c23c2fcaa2bc5cbe13e085c44ba54aa8a7aa.json  query-3164ac95fdf78fdf333fa8a075af873f81f269d02209d6f4d271fa3bd2b416e8.json  query-329478996c04f8178b5a44e9c1aff7dd289debe5841e5fbc3ee3d032190b3362.json  query-34133bed147d02509173b72fdf38525b02a64b3d8494a4fc648028e750a28886.json  query-3838f8f16fce22268544deab7b26ca8bb108f906ac86d408e44eacee3045a94c.json  query-41dbff2448e98fa77df2d8d645941aa140d920d5acb015d5a10f37d550450ba9.json  query-4be1d45622cdefaa3a6c962fe880f73dc8aa61ea376c2154c1e5a2202731378a.json  query-51208aef4730b5cd251ca00745b48abf2445ff5c7ea1a3db14d78794b08f3045.json  query-524fbf9f4e4c3b56dc6e0e196d8b65aa1b9b50941ecfe22e2f69c1076a598fac.json  query-550bcc3b33c4011971120e0c3278d30d87bf2398f5ee8b70c2d881123de11fb4.json  query-574b856bbe65d4f837743d5fa09c8b4c6ecb4949a801604c86a8473d15da0396.json  query-58e05e4b68d982575aa62339bce19180cf22db63118da36292cb19a14eb02a77.json  query-5ebfde9470ac007c38bbeee89ca24bf71ae658b976ed75bb7beba547d2ec3a8b.json  query-60284dfc186ae74c3dc5bbd8e08abafdc6d2bdd2e0037e0afedaacc35180c6c6.json  query-640b32fbf6b8d598b4d083399f09b606e8b0053498e1d5437059460311980f30.json  query-66e289569825c736458cde3cae4697eda5dae15ee26d734c36ef8e9e14172e70.json  query-6fdbaa4af9660c6b2bdff47d9ccbc0cca5e9cd48bb0de3ad0d3b4c9b263328f4.json  query-74c525d4645fc3613967769516dcc92b8ed1394ea75974e855300d7f3ea6d31b.json  query-80ca826aec74dca0f6322bc8d82fc98d3d3ea8f2e208dd4fdff72bd10a1d731b.json  query-87c9a68ff85eac21b3e1d1b30e9c8edf450e83eabb96d081272617e1fe7ea16e.json  query-88f563cbfa86bf2366d2348b8fef58345bd6daa464f7e47aac73a2b81547d513.json  query-8d1403a93367e2d290d42a919034a6c0653dcb03256707e7700ec4e87bb3175a.json  query-9114bb761d7026cd21152c8ba5bd640de95a0767a7009dd3acc8344895079628.json  (+28 more)
rpc-behaviour/: Cargo.toml
rpc-behaviour/src/: state.rs
snark/: Cargo.toml
snarker/: Cargo.toml  build.rs
vrf/: Cargo.toml  README.md
(+2427 files in other folders)
