[workspace]
members = [
    "core",
    "macros",
    "ledger",
    "snark",
    "p2p",
    "p2p/testing",
    "p2p/libp2p-rpc-behaviour",
    "node",
    "node/account",
    "node/native",
    "node/invariants",
    "node/testing",
    "cli",
    "cli/replay_dynamic_effects",
    "vrf",

    "mina-p2p-messages",
    "ledger",

    "tools/transport",
    "tools/bootstrap-sandbox",
    "tools/gossipsub-sandbox",
    "tools/hash-tool",
    "tools/ledger-tool",
    "tools/salsa-simple",
    "producer-dashboard",

    "fuzzer",
]

resolver = "2"

[workspace.dependencies]
mina-p2p-messages = { path = "mina-p2p-messages", features = ["hashing"] }
ledger = { path = "ledger", package = "mina-tree" }
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf"}
libp2p = { git = "https://github.com/openmina/rust-libp2p", rev = "cd5425a759d959d7fde58a42f71ab059449760c5", default-features = false }
vrf = { path = "vrf" }
redux = { git = "https://github.com/openmina/redux-rs.git", rev = "8c8ef93", features = ["serde"] }
serde = "1.0.190"
serde_json = "1.0.107"
serde_with = { version = "3.7.0", features = ["hex"] }
linkme = "0.3.22"
static_assertions = "1.1.0"

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true  # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = false

