[workspace]
members = [
    "core",
    "macros",
    "ledger",
    "snark",
    "p2p",
    "p2p/testing",
    "p2p/libp2p-rpc-behaviour",
    "node",
    "node/account",
    "node/common",
    "node/native",
    "node/web",
    "node/invariants",
    "node/testing",
    "cli",
    "cli/replay_dynamic_effects",
    "vrf",

    "mina-p2p-messages",
    "ledger",

    "tools/transport",
    "tools/bootstrap-sandbox",
    "tools/gossipsub-sandbox",
    "tools/hash-tool",
    "tools/ledger-tool",
    "tools/salsa-simple",
    "producer-dashboard",

    "fuzzer",
]

resolver = "2"

[workspace.dependencies]
mina-p2p-messages = { path = "mina-p2p-messages" }
ledger = { path = "ledger", package = "mina-tree" }
mina-hasher = { git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7" }
mina-signer = { git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7" }
mina-curves = { git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7" }
o1-utils = { git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7" }
kimchi = { git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", rev = "2fdb5a7"}
libp2p = { git = "https://github.com/openmina/rust-libp2p", rev = "5c44c7d9", default-features = false }
vrf = { path = "vrf" }
openmina-node-account = { path = "node/account" }
redux = { git = "https://github.com/openmina/redux-rs.git", rev = "75d4d1d9", features = ["serde"] }
serde = "1.0.190"
serde_json = "1.0.107"
serde_with = { version = "3.7.0", features = ["hex"] }
linkme = "0.3.22"
static_assertions = "1.1.0"
juniper = { version = "0.16" }


[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true  # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-ec = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-poly = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-serialize = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = false
