[workspace]
members = [
    "core",
    "macros",
    "ledger",
    "snark",
    "p2p",
    "p2p/testing",
    "p2p/libp2p-rpc-behaviour",
    "node",
    "node/account",
    "node/common",
    "node/native",
    "node/web",
    "node/invariants",
    "node/testing",
    "cli",
    "cli/replay_dynamic_effects",
    "vrf",

    "mina-p2p-messages",
    "ledger",
    "poseidon",

    "tools/transport",
    "tools/bootstrap-sandbox",
    "tools/gossipsub-sandbox",
    "tools/hash-tool",
    "tools/ledger-tool",
    "tools/salsa-simple",
    "tools/fuzzing",
    "producer-dashboard",

    "fuzzer",
]

resolver = "2"

[workspace.lints.clippy]
#unwrap_used = "warn"
arithmetic_side_effects = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
mina-p2p-messages = { path = "mina-p2p-messages" }
poseidon = { path = "poseidon" }
ledger = { path = "ledger", package = "mina-tree" }

mina-hasher = { git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }
mina-signer = { git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }
mina-curves = { git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }
# UNCOMMENTED_IN_CI mina-curves = { git = "https://github.com/openmina/proof-systems", rev = "dec49a9", features = [ "32x9" ] }
o1-utils = { git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }
kimchi = { git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }
poly-commitment = {git = "https://github.com/openmina/proof-systems", rev = "dec49a9" }

libp2p = { git = "https://github.com/openmina/rust-libp2p", rev = "5c44c7d9", default-features = false }
vrf = { path = "vrf" }
openmina-node-account = { path = "node/account" }
redux = { git = "https://github.com/openmina/redux-rs.git", rev = "ab14890c", features = [
    "serde",
] }
serde = "1.0.190"
serde_json = "1.0.107"
serde_with = { version = "3.7.0", features = ["hex"] }
linkme = "0.3.22"
static_assertions = "1.1.0"
juniper = { version = "0.16" }

ark-ff = { version = "0.3.0", features = ["parallel", "asm", "std"] }
# UNCOMMENTED_IN_CI ark-ff = { version = "0.3.0", features = [ "parallel", "asm", "std", "32x9" ] }

graphannis-malloc_size_of = { git = "https://github.com/openmina/graphannis-malloc_size_of.git", rev = "f7da9f6" }
graphannis-malloc_size_of_derive = { git = "https://github.com/openmina/graphannis-malloc_size_of_derive.git" }

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", rev = "aea157a" } # branch: fix-openmina-webnode
ark-ec = { git = "https://github.com/openmina/algebra", rev = "aea157a" } # branch: fix-openmina-webnode
ark-poly = { git = "https://github.com/openmina/algebra", rev = "aea157a" } # branch: fix-openmina-webnode
ark-serialize = { git = "https://github.com/openmina/algebra", rev = "aea157a" } # branch: fix-openmina-webnode

num-bigint = { git = "https://github.com/openmina/num-bigint", rev = "8bb5ee4" }     # branch: on-stack
num-rational = { git = "https://github.com/openmina/num-rational", rev = "336f11d" } # branch: on-stack

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = false
