[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openmina"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rand = "0.8.0"
serde = "1.0.158"
num_cpus = "1.0"
rayon = "1.5"
tokio = { version = "1.26.0" }
libp2p = { workspace = true, features = ["macros", "serde", "tcp", "dns", "tokio", "yamux", "pnet", "noise", "gossipsub"] }
redux = { git = "https://github.com/openmina/redux-rs.git", branch="feat/global-time", features = ["serde"] }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }

console = "0.15.5"
clap = { version = "4.3", features = [ "derive", "env" ] }

openmina-core = { path = "../core" }
node = { path = "../node", features = ["replay"] }
openmina-node-native = { path = "../node/native" }
bytes = "1.4.0"
tracing = "0.1.37"
nix = { version = "0.26.2", features = ["signal"] }
shellexpand = "3.1.0"
dialoguer = "0.10.4"
serde_json = "1.0.107"

[features]
unsafe-signal-handlers = []
p2p-libp2p = ["node/p2p-libp2p", "openmina-node-native/p2p-libp2p"]
p2p-webrtc = ["node/p2p-webrtc", "openmina-node-native/p2p-webrtc"]
