[package]
name = "openmina-core"
version = "0.10.3"
edition = "2021"
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1"
serde = { version = "1.0.147", features = ["rc"] }
slab = { version = "0.4.7", features = ["serde"] }
tracing = { version = "0.1", features = ["std"] }
sha2 = "0.10.6"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "2b5a909" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "2b5a909" }
redux = { workspace = true }
tokio = { version = "1.26", features = ["sync"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
md5 = "0.7.0"
multihash = { version = "0.18.1", features = ["blake2b"] }
openmina-macros = { path = "../macros" }
openmina-fuzzer = { path = "../fuzzer", optional = true }

mina-hasher = { workspace = true }
mina-p2p-messages = { workspace = true }
hex = "0.4.3"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm", "std" ] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features=["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm_thread = { version = "0.3", features = [ "es_modules" ] }

[dev-dependencies]
serde_json = { version = "1" }

[features]
fuzzing = ["openmina-fuzzer"]
