[package]
name = "mina-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ledger"
path = "src/bin/ledger.rs"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

# For wasm on browser, add those flags:
# https://stackoverflow.com/a/73023306

[dependencies]
mina-hasher = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
mina-signer = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
mina-curves = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
o1-utils = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
kimchi = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
oracle = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }

bs58 = "0.4.0"
mina-p2p-messages = { git = "https://github.com/name-placeholder/mina-p2p-messages-rs", features = ["hashing"] }
# mina-p2p-messages = { path = "/home/sebastien/github/mina-p2p-messages-rs", features = ["hashing"] }
# mina-p2p-messages = { path = "/tmp/mina-p2p-messages-rs", features = ["hashing"] }

binprot = { git = "https://github.com/name-placeholder/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
binprot_derive = { git = "https://github.com/name-placeholder/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }

sha2 = "0.10"
base64 = "0.13"
static_assertions = "1.1"

# oracle = { path = "../oracle" }
# mina-curves = { path = "../curves" }
# o1-utils = { path = "../utils" }



# ark-ff = { version = "0.3.0", features = [ "parallel", "asm", "std" ] }
# ark-serialize = { version = "0.3.0", features = [ "std" ] }

ark-ff = { git = "https://github.com/name-placeholder/algebra", branch = "openmina", features = [ "parallel", "asm", "std" ] }
ark-serialize = { git = "https://github.com/name-placeholder/algebra", branch = "openmina", features = [ "std" ] }

rayon = "1"

bitvec = "1.0.0"
hex = "0.4.3"
num-bigint = "0.4"

once_cell = "1"
rand = "0.8"
uuid = { version = "1", features = [ "v4" ] }

packed_simd = { version = "0.3", package = "packed_simd_2" }
backtrace = "0.3"
derive_more = "0.99.17"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm_thread = { version = "0.2", features = [ "es_modules" ] }
wasm-bindgen = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# ocaml-interop = { path = "/home/sebastien/github/ocaml-interop" }
ocaml-interop = { git = "https://github.com/sebastiencs/ocaml-interop.git", branch = "closure-values-dbg" }
# ocaml-interop = { git = "https://github.com/tizoc/ocaml-interop.git", branch = "closure-values" }

[dev-dependencies]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
web-sys = { version = "0.3", features = ["Blob", "DedicatedWorkerGlobalScope", "MessageEvent", "Url", "Worker", "WorkerType", "WorkerOptions", "console", "Window", "Performance" ] }

[features]
# Add this feature to run tests in both nodejs and browser:
# https://github.com/rustwasm/wasm-bindgen/issues/2571
in_nodejs = []

[profile.release]
debug = true

[patch.crates-io]
ark-ff = { git = "https://github.com/name-placeholder/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/name-placeholder/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/name-placeholder/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/name-placeholder/algebra", branch = "openmina" }
# ark-ff = { path = "/home/sebastien/github/algebra/ff" }
# ark-ec = { path = "/home/sebastien/github/algebra/ec" }
# ark-poly = { path = "/home/sebastien/github/algebra/poly" }
# ark-serialize = { path = "/home/sebastien/github/algebra/serialize" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
mina-signer = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
mina-curves = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
o1-utils = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
kimchi = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
oracle = { git = "https://github.com/name-placeholder/proof-systems", branch = "ledger" }
# mina-hasher = { path = "/home/sebastien/github/proof-systems/hasher" }
# mina-signer = { path = "/home/sebastien/github/proof-systems/signer" }
# mina-curves = { path = "/home/sebastien/github/proof-systems/curves" }
# o1-utils = { path = "/home/sebastien/github/proof-systems/utils" }
# kimchi = { path = "/home/sebastien/github/proof-systems/kimchi" }
# oracle = { path = "/home/sebastien/github/proof-systems/oracle" }
