(rule
 (targets libmina_tree.a libmina_tree.so dllmina_tree.so)
 (deps (source_tree .))
 (action
  (no-infer
   (progn
    (run sh -c "cd /home/dan/code/mina/src/lib/mina_tree && cargo build --release")
    (run sh -c
      "cp /home/dan/code/mina/src/lib/mina_tree/target/release/libmina_tree.so ./libmina_tree.so 2> /dev/null || \
       cp /home/dan/code/mina/src/lib/mina_tree/target/release/libmina_tree.dylib ./libmina_tree.so")
    (run cp /home/dan/code/mina/src/lib/mina_tree/target/release/libmina_tree.so ./dllmina_tree.so)
    (run cp /home/dan/code/mina/src/lib/mina_tree/target/release/libmina_tree.a ./libmina_tree.a)
   ))))

(library
 (name mina_tree)
 (public_name mina_tree)
 (c_library_flags -lpthread -lc -lm)
 (foreign_archives mina_tree))
