[package]
name = "mina-p2p-messages"
version = "0.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = { version = "1.0.83" }
hex = "0.4.3"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
thiserror = "1.0.32"
derive_more = "0.99.17"
bs58 = { version = "0.4", features = ["check"] }
base64 = "0.13.1"
sha2 = { version = "0.10.2", optional = true }
blake2 = { version = "0.10", optional = true }

mina-hasher = {git = "https://github.com/o1-labs/proof-systems", rev = "373a294cf87f94d1bb518a248fbf71364aa73526", optional = true }
mina-curves = {git = "https://github.com/o1-labs/proof-systems", rev = "373a294cf87f94d1bb518a248fbf71364aa73526", optional = true }
mina-signer = {git = "https://github.com/o1-labs/proof-systems", rev = "373a294cf87f94d1bb518a248fbf71364aa73526", optional = true }
mina-poseidon = {git = "https://github.com/o1-labs/proof-systems", rev = "373a294cf87f94d1bb518a248fbf71364aa73526", optional = true }
o1-utils = {git = "https://github.com/o1-labs/proof-systems", rev = "373a294cf87f94d1bb518a248fbf71364aa73526", optional = true }

ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ], optional = true }

[target.'cfg(fuzzing)'.dev-dependencies]
fuzzcheck = "0.12.1"

[dev-dependencies]
gloo-utils = "0.1.5"
wasm-bindgen = "0.2.83"
anyhow = "1.0.65"
toml = "0.5.9"
clap = { version = "4.0.18", features = ["derive"] }
alloc-test = { git = "https://github.com/openmina/alloc-test.git" }
time = { version = "0.3.17", features = ["formatting"] }


[features]
hashing = ["mina-hasher", "mina-curves", "mina-signer", "mina-poseidon", "o1-utils", "sha2", "blake2", "ark-ff"]

[target.wasm32-unknown-unknown.dev-dependencies]
web-sys = { version = "0.3.60", features = ["console"] }
wasm-bindgen-test = "0.3.33"
wasm-bindgen = "0.2.83"
