[package]
name = "mina-p2p-messages"
version = "0.6.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = { version = "1.0.83" }
serde_bytes = "0.11"
hex = "0.4.3"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "2b5a909" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "2b5a909" }
thiserror = "1.0.32"
derive_more = "0.99.17"
bs58 = { version = "0.4", features = ["check"] }
base64 = "0.22"
sha2 = { version = "0.10.2" }
blake2 = { version = "0.10" }
time = "0.3.36"
num-bigint = "0.4.6"

openmina-macros = { path = "../macros" }

mina-hasher = { workspace = true }
mina-curves = { workspace = true }
mina-signer = { workspace = true }
mina-poseidon = { workspace = true }
o1-utils = { workspace = true }

ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
rsexp = "0.2.3"
rsexp-derive = "0.2.3"

[target.'cfg(fuzzing)'.dev-dependencies]
fuzzcheck = "0.12.1"

[dev-dependencies]
wasm-bindgen = "0.2"
anyhow = "1.0.65"
toml = "0.5.9"
clap = { version = "4.0.18", features = ["derive"] }
alloc-test = { git = "https://github.com/openmina/alloc-test.git" }
time = { version = "0.3.17", features = ["formatting"] }

[target.wasm32-unknown-unknown.dev-dependencies]
web-sys = { version = "0.3.60", features = ["console"] }
wasm-bindgen-test = "0.3.33"
wasm-bindgen = "0.2"
