[package]
name = "node"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
serde_with = "3.6.1"
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
lazy_static = "1.4.0"
thiserror = "1.0.37"
anyhow = "1.0.70"
num_enum = "0.5.7"
bincode = "1.3.3"
redux = { workspace = true }
mina-hasher = { workspace = true }
mina-signer = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
vrf = { workspace = true }

openmina-core = { path = "../core" }
snark = { path = "../snark" }
p2p = { path = "../p2p" }
openmina-node-account = { path = "./account" }

[build-dependencies]
regex = "1"
rust-format = "0.3"
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitcl", "rustc"] }

[features]
replay = []
#p2p-webrtc = ["p2p/p2p-webrtc"]
#p2p-libp2p = ["p2p/p2p-libp2p"]
