[package]
name = "node"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
serde_with = { version = "3.6.1", features = ["time_0_3"] }
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
lazy_static = "1.4.0"
thiserror = "1.0.37"
time = { version = "0.3.36", features = ["parsing"] }
anyhow = "1.0.70"
num_enum = "0.5.7"
redux = { workspace = true }
mina-hasher = { workspace = true }
mina-signer = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
vrf = { workspace = true }
linkme = "0.3.22"
openmina-core = { path = "../core" }
snark = { path = "../snark" }
p2p = { path = "../p2p" }
openmina-node-account = { path = "./account" }
tokio = { version = "1.26.0" }
postcard = { version = "1.0.8", features = ["use-std"] }

[build-dependencies]
regex = "1"
rust-format = "0.3"
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitcl", "rustc"] }

[features]
default = ["p2p-libp2p"]
replay = []
p2p-webrtc = ["p2p/p2p-webrtc"]
p2p-libp2p = ["p2p/p2p-libp2p"]
